--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  /* Architype Renner  */
   font-family: sans-serif;
 }
 a {
@@ -24,6 +23,8 @@ ul,
 li {
   list-style: none;
 }
+
+/* header styles */
 
 .c-header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -80,6 +81,10 @@ li {
   float: left;
 }
 
+.c-nav__menu span {
+  font-size: 20px;
+}
+
 .isLight {
   color: #787878;
 }
@@ -129,6 +134,8 @@ li {
   font-size: 9px;
   padding: 7px;
 }
+
+/* article styles */
 
 .c-article {
   max-width: 100%;
@@ -206,15 +213,17 @@ li {
   text-align: center;
 }
 
+/* footer styles */
+
 .c-footer {
-  background-color: #787878;
-  max-width: 100%;
+  background-color: #474646;
+  width: 100%;
   height: 350px;
   display: flex;
 }
 
 .c-footer__contentSpace {
-  width: 900px;
+  width: 1000px;
   margin: 0 auto;
   display: flex;
 }
@@ -228,6 +237,14 @@ li {
   gap: 10px;
 }
 
+.hr700 {
+  display: none;
+}
+
+.c-contentFoot hr {
+  display: none;
+}
+
 .c-contentFoot__info {
   color: #ffffff;
   display: flex;
@@ -238,15 +255,49 @@ li {
   width: 90%;
   height: 90%;
   margin: auto;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
 }
 
 .c-contentInfo li,
 p {
   padding: 8px 0;
 }
+
+.c-footData {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.c-footData li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.c-circle_data {
+  background-color: rgb(102, 102, 102);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.c-contentSocialMedia__logos {
+  display: flex;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.c-circle_media {
+  background-color: rgb(102, 102, 102);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Media queries */
 
 @media screen and (max-width: 700px) {
   .c-titulo {
@@ -293,6 +344,25 @@ p {
     padding: 0 8px;
     text-align: center;
   }
+  .c-footer {
+    height: 600px;
+  }
+
+  .c-contentFoot {
+    grid-template-columns: 49% 49%;
+    grid-template-rows: 49% 2% 49%;
+    gap: 10px;
+  }
+
+  .hr700 {
+    display: block;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .hr700 hr {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -336,5 +406,33 @@ p {
     width: 100%;
     height: 100%;
     font-size: 12px;
+  }
+
+  .c-content__infoText_is--big {
+    padding: 0px 5px;
+    font-size: 18px;
+  }
+
+  .c-footer {
+    height: 1200px;
+  }
+
+  .c-contentFoot {
+    grid-template-columns: 100%;
+    grid-template-rows: 24.5% 0.2% 24.5% 0.2% 24.5% 0.2% 24.5%;
+    gap: 10px;
+  }
+  .hr700 {
+    display: none;
+  }
+
+  .c-contentFoot hr {
+    display: block;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+
+  .c-contentFoot__info {
+    height: 260px;
   }
 }
