--- a/style.css
+++ b/style.css
@@ -28,23 +28,61 @@ li {
 /* header styles */
 
 .c-header {
-  background-image: linear-gradient(#00000080, #00000080),
-    url(Stardust_LogoBase.png);
-  max-width: 100%;
+  width: 100%;
   height: 350px;
+}
+
+.c-carosel {
+  width: 300%;
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.c-carousel__content {
+  width: calc(100% / 3);
+  height: 100%;
   background-size: 100% 350px;
   background-repeat: no-repeat;
   background-blend-mode: darken;
 }
 
-.c-space {
-  height: 3%;
+.c-carousel__list {
+  width: 100%;
+  position: absolute;
+  top: 300px;
+}
+
+.points {
+  width: 100%;
+  height: 40px;
+  padding: 0.4em;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.point {
+  background-color: #383838;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+
+.activo {
+  background-color: orange;
 }
 
 .c-nav {
   color: white;
-  max-width: 100%;
-  height: 9%;
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  top: 15px;
   display: flex;
   justify-content: space-between;
 }
@@ -300,6 +338,11 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.mapGoogle {
+  width: 100%;
+  height: 160px;
 }
 
 /* Media queries */
